// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AbsencePeriods /> should add a period 1`] = `
.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c8:link,
.c8:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):active,
.c8:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c8[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 1.9rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c16:link,
.c16:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c16:not([disabled]):hover,
.c16:not([disabled]):active,
.c16:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c16[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c7 {
  color: #7994d4;
  line-height: 1.25;
  font-size: 1.8rem;
  font-weight: 400;
}

.c14 {
  position: relative;
  display: inline-block;
}

.c15 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: right;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c15[disabled] {
  color: #9298af;
  background-color: #e4e8ef;
  box-shadow: none;
  cursor: not-allowed;
}

.c15::-webkit-outer-spin-button,
.c15::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c15::-webkit-calendar-picker-indicator {
  display: block;
  width: 3.2rem;
  height: 3.2rem;
  margin-right: -2rem;
  color: rgba(0,0,0,0);
  background-color: #9298af;
  cursor: pointer;
  opacity: 1;
  -webkit-mask-image: url("data:image/svg+xml;,%3Csvg%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M20.947%207.601h1.601c1.472%200%202.521%201.198%202.521%202.669v2.306l-.001%2010.392c0%201.472-1.049%202.669-2.521%202.669H8.669A2.672%202.672%200%20016%2022.967l.001-12.697a2.672%202.672%200%20012.67-2.669h1.331V6h.999v1.601H20V6h.947v1.601zm1.6%2017.036c.883%200%201.454-.786%201.454-1.67v-10.33h-17L7%2022.967c0%20.884.785%201.67%201.668%201.67h13.879zm-15.548-13h17.002l.001-1.367c0-.883-.57-1.601-1.453-1.601h-1.6v1.068H20V8.669h-9v1.068h-1V8.669H8.669C7.786%208.669%207%209.387%207%2010.27v1.367zm9.677%206.277h-2.135a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203h-2.135v2.135h2.136v-2.135zm3.203%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068H19.88a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135H19.88v-2.135zm-8.54%208.541H9.204a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H9.204v2.135h2.136l-.001-2.135zm3.202%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068h-2.135a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135h-2.136v-2.135zm7.473%203.203H19.88a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H19.88v2.135h2.136v-2.135z%22%20fill%3D%22currentColor%22%2F%3E%3C%2Fsvg%3E");
  mask-image: url("data:image/svg+xml;,%3Csvg%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M20.947%207.601h1.601c1.472%200%202.521%201.198%202.521%202.669v2.306l-.001%2010.392c0%201.472-1.049%202.669-2.521%202.669H8.669A2.672%202.672%200%20016%2022.967l.001-12.697a2.672%202.672%200%20012.67-2.669h1.331V6h.999v1.601H20V6h.947v1.601zm1.6%2017.036c.883%200%201.454-.786%201.454-1.67v-10.33h-17L7%2022.967c0%20.884.785%201.67%201.668%201.67h13.879zm-15.548-13h17.002l.001-1.367c0-.883-.57-1.601-1.453-1.601h-1.6v1.068H20V8.669h-9v1.068h-1V8.669H8.669C7.786%208.669%207%209.387%207%2010.27v1.367zm9.677%206.277h-2.135a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203h-2.135v2.135h2.136v-2.135zm3.203%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068H19.88a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135H19.88v-2.135zm-8.54%208.541H9.204a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H9.204v2.135h2.136l-.001-2.135zm3.202%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068h-2.135a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135h-2.136v-2.135zm7.473%203.203H19.88a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H19.88v2.135h2.136v-2.135z%22%20fill%3D%22currentColor%22%2F%3E%3C%2Fsvg%3E");
}

.c15:invalid {
  border-color: #eb5757;
}

.c15::-webkit-input-placeholder {
  color: #9298af;
}

.c15::-moz-placeholder {
  color: #9298af;
}

.c15:-ms-input-placeholder {
  color: #9298af;
}

.c15::placeholder {
  color: #9298af;
}

.c15:focus {
  border-color: #7994d4;
}

.c15:focus::-webkit-input-placeholder {
  color: transparent;
}

.c15:focus::-moz-placeholder {
  color: transparent;
}

.c15:focus:-ms-input-placeholder {
  color: transparent;
}

.c15:focus::placeholder {
  color: transparent;
}

.c11 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c13 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c12 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: 1px solid transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c12[disabled] {
  color: #9298af;
  background-color: #e4e8ef;
  box-shadow: none;
  cursor: not-allowed;
}

.c12::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c12 *::-ms-backdrop {
  padding-right: 1.6rem;
}

.c17 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin: 1rem 0;
  padding-left: 0;
}

.c9 {
  margin-left: 1rem;
}

.c10 {
  width: 2rem;
  margin-left: 0.4rem;
  color: #f66663;
}

.c18 {
  width: 2rem;
  margin-right: 0.4rem;
  color: #f66663;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-weight: 600;
  font-size: 1.8rem;
  cursor: default;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1rem;
}

.c6 {
  display: none;
}

.c4 {
  padding-top: 1rem;
  padding-bottom: 0.4rem;
  font-weight: 700;
  font-size: 1.4rem;
}

.c3 {
  -webkit-flex: 0 1 35rem;
  -ms-flex: 0 1 35rem;
  flex: 0 1 35rem;
  margin-right: 2rem;
}

.c5 {
  margin-right: 2rem;
}

@media (max-width:600px) {
  .c8 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c16 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c14 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c15 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

@media (max-width:600px) {
  .c11 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    margin-bottom: 3.2rem;
  }
}

@media (max-width:600px) {
  .c1 {
    display: none;
  }
}

@media (max-width:600px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (max-width:600px) {
  .c3 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    margin-right: 0;
  }
}

@media (max-width:600px) {
  .c5 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    margin-right: 0;
  }
}

<div>
  <p>
    Les congés payés, le congé de maternité ou d'adoption, le congé de présence parental ,l'arrêt de travail lié à un accident du travail ou une maladie professionnelle, le congé individuel de formation (CIF), le congé de solidarité internationale, le congé de solidarité familiale et le stage de fin d'étude de plus de 2 mois sont déjà prises en compte dans l'ancienneté et ne sont pas des périodes à renseigner ci-après :
  </p>
  <p
    class="c0"
  >
    Quels sont le motif et la durée de ces absences prolongées ?
  </p>
  <div
    class="c1 c2"
  >
    <div
      class="c3 c4"
    >
      Motif
    </div>
    <div
      class="c5 c4"
    >
      Durée (en mois)
    </div>
  </div>
  <div
    class="c2"
  >
    <div
      class="c6"
    >
      <span
        class="c7"
        font-size="hsmall"
        font-weight="400"
      >
        Période 
        1
      </span>
      <button
        class="c8 c9"
        type="button"
      >
        Supprimer
        <svg
          aria-hidden="true"
          class="c10"
          fill="none"
          viewBox="0 0 32 32"
        >
          <path
            clip-rule="evenodd"
            d="M14.752 16.5L7.258 8.591A.957.957 0 017 7.932c0-.247.093-.484.259-.659A.858.858 0 017.883 7a.86.86 0 01.625.273L16 15.183l7.492-7.91A.859.859 0 0124.117 7c.234 0 .459.098.624.273a.957.957 0 01.259.659.957.957 0 01-.259.66L17.249 16.5l7.492 7.909a.958.958 0 01.259.659.957.957 0 01-.259.659.859.859 0 01-.624.273.86.86 0 01-.625-.273L16 17.817l-7.492 7.91a.859.859 0 01-.625.273.859.859 0 01-.624-.273.957.957 0 01-.259-.659.96.96 0 01.259-.66l7.492-7.908z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <div
        class="c6 c4"
      >
        Motif
      </div>
      <div
        class="c11"
      >
        <select
          class="c12"
        >
          <option>
            Absence pour maladie non professionnelle
          </option>
          <option>
            Arrêt maladie lié à un accident de trajet
          </option>
          <option>
            Congé sabbatique
          </option>
          <option>
            Congé pour création d'entreprise
          </option>
          <option>
            Congé parental d'éducation
          </option>
          <option>
            Congés sans solde
          </option>
          <option>
            Grève
          </option>
          <option>
            Mise à pied
          </option>
          <option>
            Maladie d'origine non professionnelle
          </option>
          <option>
            Congé de paternité
          </option>
        </select>
        <div
          aria-hidden="true"
          class="c13"
        >
          <svg
            fill="none"
            viewBox="0 0 16 16"
          >
            <g
              clip-path="url(#arrow-down_svg__clip0)"
            >
              <path
                d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
                fill="currentColor"
              />
            </g>
            <defs>
              <clippath
                id="arrow-down_svg__clip0"
              >
                <path
                  d="M0 0h16v16H0z"
                  fill="currentColor"
                />
              </clippath>
            </defs>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c6 c4"
      >
        Durée (en mois)
      </div>
      <span
        class="c14"
      >
        <input
          class="c15"
          name="absences[0].duration"
          type="number"
          value=""
        />
      </span>
    </div>
    <div
      class="c1"
    >
      <button
        class="c16 c9"
        type="button"
      >
        Supprimer
        <svg
          aria-hidden="true"
          class="c10"
          fill="none"
          viewBox="0 0 32 32"
        >
          <path
            clip-rule="evenodd"
            d="M14.752 16.5L7.258 8.591A.957.957 0 017 7.932c0-.247.093-.484.259-.659A.858.858 0 017.883 7a.86.86 0 01.625.273L16 15.183l7.492-7.91A.859.859 0 0124.117 7c.234 0 .459.098.624.273a.957.957 0 01.259.659.957.957 0 01-.259.66L17.249 16.5l7.492 7.909a.958.958 0 01.259.659.957.957 0 01-.259.659.859.859 0 01-.624.273.86.86 0 01-.625-.273L16 17.817l-7.492 7.91a.859.859 0 01-.625.273.859.859 0 01-.624-.273.957.957 0 01-.259-.659.96.96 0 01.259-.66l7.492-7.908z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="c8 c17"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c18"
      fill="none"
      viewBox="0 0 16 16"
    >
      <path
        clip-rule="evenodd"
        d="M8 2a1 1 0 00-1 1v4H3a1 1 0 000 2h4v4a1 1 0 102 0V9h4a1 1 0 100-2H9V3a1 1 0 00-1-1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    Ajouter une période
  </button>
</div>
`;

exports[`<AbsencePeriods /> should delete a period 1`] = `
.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c6:link,
.c6:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c6:not([disabled]):hover,
.c6:not([disabled]):active,
.c6:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c6[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c7 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin: 1rem 0;
  padding-left: 0;
}

.c8 {
  width: 2rem;
  margin-right: 0.4rem;
  color: #f66663;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-weight: 600;
  font-size: 1.8rem;
  cursor: default;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1rem;
}

.c4 {
  padding-top: 1rem;
  padding-bottom: 0.4rem;
  font-weight: 700;
  font-size: 1.4rem;
}

.c3 {
  -webkit-flex: 0 1 35rem;
  -ms-flex: 0 1 35rem;
  flex: 0 1 35rem;
  margin-right: 2rem;
}

.c5 {
  margin-right: 2rem;
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {

}

@media (max-width:600px) {

}

@media (max-width:600px) {

}

@media (max-width:600px) {

}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    margin-bottom: 3.2rem;
  }
}

@media (max-width:600px) {
  .c1 {
    display: none;
  }
}

@media (max-width:600px) {

}

@media (max-width:600px) {
  .c3 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    margin-right: 0;
  }
}

@media (max-width:600px) {
  .c5 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    margin-right: 0;
  }
}

<div>
  <p>
    Les congés payés, le congé de maternité ou d'adoption, le congé de présence parental ,l'arrêt de travail lié à un accident du travail ou une maladie professionnelle, le congé individuel de formation (CIF), le congé de solidarité internationale, le congé de solidarité familiale et le stage de fin d'étude de plus de 2 mois sont déjà prises en compte dans l'ancienneté et ne sont pas des périodes à renseigner ci-après :
  </p>
  <p
    class="c0"
  >
    Quels sont le motif et la durée de ces absences prolongées ?
  </p>
  <div
    class="c1 c2"
  >
    <div
      class="c3 c4"
    >
      Motif
    </div>
    <div
      class="c5 c4"
    >
      Durée (en mois)
    </div>
  </div>
  <button
    class="c6 c7"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c8"
      fill="none"
      viewBox="0 0 16 16"
    >
      <path
        clip-rule="evenodd"
        d="M8 2a1 1 0 00-1 1v4H3a1 1 0 000 2h4v4a1 1 0 102 0V9h4a1 1 0 100-2H9V3a1 1 0 00-1-1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    Ajouter une période
  </button>
</div>
`;

exports[`<AbsencePeriods /> should render 1`] = `
.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c8:link,
.c8:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):active,
.c8:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c8[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 1.9rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c16:link,
.c16:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c16:not([disabled]):hover,
.c16:not([disabled]):active,
.c16:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c16[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c7 {
  color: #7994d4;
  line-height: 1.25;
  font-size: 1.8rem;
  font-weight: 400;
}

.c14 {
  position: relative;
  display: inline-block;
}

.c15 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: right;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c15[disabled] {
  color: #9298af;
  background-color: #e4e8ef;
  box-shadow: none;
  cursor: not-allowed;
}

.c15::-webkit-outer-spin-button,
.c15::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c15::-webkit-calendar-picker-indicator {
  display: block;
  width: 3.2rem;
  height: 3.2rem;
  margin-right: -2rem;
  color: rgba(0,0,0,0);
  background-color: #9298af;
  cursor: pointer;
  opacity: 1;
  -webkit-mask-image: url("data:image/svg+xml;,%3Csvg%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M20.947%207.601h1.601c1.472%200%202.521%201.198%202.521%202.669v2.306l-.001%2010.392c0%201.472-1.049%202.669-2.521%202.669H8.669A2.672%202.672%200%20016%2022.967l.001-12.697a2.672%202.672%200%20012.67-2.669h1.331V6h.999v1.601H20V6h.947v1.601zm1.6%2017.036c.883%200%201.454-.786%201.454-1.67v-10.33h-17L7%2022.967c0%20.884.785%201.67%201.668%201.67h13.879zm-15.548-13h17.002l.001-1.367c0-.883-.57-1.601-1.453-1.601h-1.6v1.068H20V8.669h-9v1.068h-1V8.669H8.669C7.786%208.669%207%209.387%207%2010.27v1.367zm9.677%206.277h-2.135a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203h-2.135v2.135h2.136v-2.135zm3.203%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068H19.88a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135H19.88v-2.135zm-8.54%208.541H9.204a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H9.204v2.135h2.136l-.001-2.135zm3.202%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068h-2.135a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135h-2.136v-2.135zm7.473%203.203H19.88a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H19.88v2.135h2.136v-2.135z%22%20fill%3D%22currentColor%22%2F%3E%3C%2Fsvg%3E");
  mask-image: url("data:image/svg+xml;,%3Csvg%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M20.947%207.601h1.601c1.472%200%202.521%201.198%202.521%202.669v2.306l-.001%2010.392c0%201.472-1.049%202.669-2.521%202.669H8.669A2.672%202.672%200%20016%2022.967l.001-12.697a2.672%202.672%200%20012.67-2.669h1.331V6h.999v1.601H20V6h.947v1.601zm1.6%2017.036c.883%200%201.454-.786%201.454-1.67v-10.33h-17L7%2022.967c0%20.884.785%201.67%201.668%201.67h13.879zm-15.548-13h17.002l.001-1.367c0-.883-.57-1.601-1.453-1.601h-1.6v1.068H20V8.669h-9v1.068h-1V8.669H8.669C7.786%208.669%207%209.387%207%2010.27v1.367zm9.677%206.277h-2.135a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203h-2.135v2.135h2.136v-2.135zm3.203%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068H19.88a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135H19.88v-2.135zm-8.54%208.541H9.204a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H9.204v2.135h2.136l-.001-2.135zm3.202%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068h-2.135a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135h-2.136v-2.135zm7.473%203.203H19.88a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H19.88v2.135h2.136v-2.135z%22%20fill%3D%22currentColor%22%2F%3E%3C%2Fsvg%3E");
}

.c15:invalid {
  border-color: #eb5757;
}

.c15::-webkit-input-placeholder {
  color: #9298af;
}

.c15::-moz-placeholder {
  color: #9298af;
}

.c15:-ms-input-placeholder {
  color: #9298af;
}

.c15::placeholder {
  color: #9298af;
}

.c15:focus {
  border-color: #7994d4;
}

.c15:focus::-webkit-input-placeholder {
  color: transparent;
}

.c15:focus::-moz-placeholder {
  color: transparent;
}

.c15:focus:-ms-input-placeholder {
  color: transparent;
}

.c15:focus::placeholder {
  color: transparent;
}

.c11 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c13 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c12 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: 1px solid transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c12[disabled] {
  color: #9298af;
  background-color: #e4e8ef;
  box-shadow: none;
  cursor: not-allowed;
}

.c12::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c12 *::-ms-backdrop {
  padding-right: 1.6rem;
}

.c17 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin: 1rem 0;
  padding-left: 0;
}

.c9 {
  margin-left: 1rem;
}

.c10 {
  width: 2rem;
  margin-left: 0.4rem;
  color: #f66663;
}

.c18 {
  width: 2rem;
  margin-right: 0.4rem;
  color: #f66663;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-weight: 600;
  font-size: 1.8rem;
  cursor: default;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1rem;
}

.c6 {
  display: none;
}

.c4 {
  padding-top: 1rem;
  padding-bottom: 0.4rem;
  font-weight: 700;
  font-size: 1.4rem;
}

.c3 {
  -webkit-flex: 0 1 35rem;
  -ms-flex: 0 1 35rem;
  flex: 0 1 35rem;
  margin-right: 2rem;
}

.c5 {
  margin-right: 2rem;
}

@media (max-width:600px) {
  .c8 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c16 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c14 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c15 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

@media (max-width:600px) {
  .c11 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    margin-bottom: 3.2rem;
  }
}

@media (max-width:600px) {
  .c1 {
    display: none;
  }
}

@media (max-width:600px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (max-width:600px) {
  .c3 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    margin-right: 0;
  }
}

@media (max-width:600px) {
  .c5 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    margin-right: 0;
  }
}

<div>
  <p>
    Les congés payés, le congé de maternité ou d'adoption, le congé de présence parental ,l'arrêt de travail lié à un accident du travail ou une maladie professionnelle, le congé individuel de formation (CIF), le congé de solidarité internationale, le congé de solidarité familiale et le stage de fin d'étude de plus de 2 mois sont déjà prises en compte dans l'ancienneté et ne sont pas des périodes à renseigner ci-après :
  </p>
  <p
    class="c0"
  >
    Quels sont le motif et la durée de ces absences prolongées ?
  </p>
  <div
    class="c1 c2"
  >
    <div
      class="c3 c4"
    >
      Motif
    </div>
    <div
      class="c5 c4"
    >
      Durée (en mois)
    </div>
  </div>
  <div
    class="c2"
  >
    <div
      class="c6"
    >
      <span
        class="c7"
        font-size="hsmall"
        font-weight="400"
      >
        Période 
        1
      </span>
      <button
        class="c8 c9"
        type="button"
      >
        Supprimer
        <svg
          aria-hidden="true"
          class="c10"
          fill="none"
          viewBox="0 0 32 32"
        >
          <path
            clip-rule="evenodd"
            d="M14.752 16.5L7.258 8.591A.957.957 0 017 7.932c0-.247.093-.484.259-.659A.858.858 0 017.883 7a.86.86 0 01.625.273L16 15.183l7.492-7.91A.859.859 0 0124.117 7c.234 0 .459.098.624.273a.957.957 0 01.259.659.957.957 0 01-.259.66L17.249 16.5l7.492 7.909a.958.958 0 01.259.659.957.957 0 01-.259.659.859.859 0 01-.624.273.86.86 0 01-.625-.273L16 17.817l-7.492 7.91a.859.859 0 01-.625.273.859.859 0 01-.624-.273.957.957 0 01-.259-.659.96.96 0 01.259-.66l7.492-7.908z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="c3"
    >
      <div
        class="c6 c4"
      >
        Motif
      </div>
      <div
        class="c11"
      >
        <select
          class="c12"
        >
          <option>
            Absence pour maladie non professionnelle
          </option>
          <option>
            Arrêt maladie lié à un accident de trajet
          </option>
          <option>
            Congé sabbatique
          </option>
          <option>
            Congé pour création d'entreprise
          </option>
          <option>
            Congé parental d'éducation
          </option>
          <option>
            Congés sans solde
          </option>
          <option>
            Grève
          </option>
          <option>
            Mise à pied
          </option>
          <option>
            Maladie d'origine non professionnelle
          </option>
          <option>
            Congé de paternité
          </option>
        </select>
        <div
          aria-hidden="true"
          class="c13"
        >
          <svg
            fill="none"
            viewBox="0 0 16 16"
          >
            <g
              clip-path="url(#arrow-down_svg__clip0)"
            >
              <path
                d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
                fill="currentColor"
              />
            </g>
            <defs>
              <clippath
                id="arrow-down_svg__clip0"
              >
                <path
                  d="M0 0h16v16H0z"
                  fill="currentColor"
                />
              </clippath>
            </defs>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c6 c4"
      >
        Durée (en mois)
      </div>
      <span
        class="c14"
      >
        <input
          class="c15"
          name="absences[0].duration"
          type="number"
          value="3"
        />
      </span>
    </div>
    <div
      class="c1"
    >
      <button
        class="c16 c9"
        type="button"
      >
        Supprimer
        <svg
          aria-hidden="true"
          class="c10"
          fill="none"
          viewBox="0 0 32 32"
        >
          <path
            clip-rule="evenodd"
            d="M14.752 16.5L7.258 8.591A.957.957 0 017 7.932c0-.247.093-.484.259-.659A.858.858 0 017.883 7a.86.86 0 01.625.273L16 15.183l7.492-7.91A.859.859 0 0124.117 7c.234 0 .459.098.624.273a.957.957 0 01.259.659.957.957 0 01-.259.66L17.249 16.5l7.492 7.909a.958.958 0 01.259.659.957.957 0 01-.259.659.859.859 0 01-.624.273.86.86 0 01-.625-.273L16 17.817l-7.492 7.91a.859.859 0 01-.625.273.859.859 0 01-.624-.273.957.957 0 01-.259-.659.96.96 0 01.259-.66l7.492-7.908z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="c8 c17"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c18"
      fill="none"
      viewBox="0 0 16 16"
    >
      <path
        clip-rule="evenodd"
        d="M8 2a1 1 0 00-1 1v4H3a1 1 0 000 2h4v4a1 1 0 102 0V9h4a1 1 0 100-2H9V3a1 1 0 00-1-1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    Ajouter une période
  </button>
</div>
`;
